--- a/src/app/pages/import-orders/import-orders.component.scss
+++ b/src/app/pages/import-orders/import-orders.component.scss
@@ -1,15 +1,5 @@
-.import-box{
-    border: 2px dashed #ccc;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    padding: 8vh 8vw;
 
-    .upload-icon{
-        font-size: 46px;
-    }
 
-    &.drag-over{
-        background-color: var(--lighter);
-    }
+.input-search {
+    width: 300px;
 }
