--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,19 +38,34 @@
 
 .modal-sm {
     .modal-dialog {
-        max-width: 200px;
+        max-width: 400px;
     }
 }
 
-.modal-md {
-    .modal-dialog {
-        max-width: 565px;
-    }
-}
+// .modal-md {
+//     .modal-dialog {
+//         max-width: 565px;
+//     }
+// }
 
 .modal-md {
     .modal-dialog {
         max-width: 865px;
+    }
+}
+
+.modal-large {
+    .modal-dialog {
+        max-width: 1000px;
+    }
+}
+
+.modal-content {
+    border-radius: 20px !important;
+
+    .modal-footer {
+        border-bottom-right-radius: 15px !important;
+        border-bottom-left-radius: 15px !important;
     }
 }
 
