feat: tela mensagem padrão

--- a/src/assets/scss/custom-identidade/custom-brand.scss
+++ b/src/assets/scss/custom-identidade/custom-brand.scss
@@ -199,3 +199,10 @@ ul.stepper li.active a .label, ul.stepper li.completed a .label {
         border-bottom-right-radius: 15px;
     }
 }
+
+
+
+.table-responsive {
+    border-bottom-left-radius: 20px !important;
+    border-bottom-right-radius: 20px !important;
+}
