--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -129,7 +129,7 @@
           </div>
         </div>
       </div>
-      <div class="table-responsive" >
+      <div class="table-responsive shadow" >
         <table class="table align-items-center table-flush">
           <thead class="thead-purple">
             <tr>
@@ -155,7 +155,7 @@
       </div>
     </div>
 
-    <div *ngIf="reportSelect.historySenders.length > 0" class="mt-2">
+    <div *ngIf="reportSelect.historySenders.length > 0" class="mt-3">
       <div class="card-header border-0">
         <div class="row align-items-center">
           <div class="col">
@@ -163,7 +163,7 @@
           </div>
         </div>
       </div>
-      <div class="table-responsive">
+      <div class="table-responsive shadow">
         <!-- Projects table -->
         <table class="table align-items-center table-flush">
           <thead class="thead-purple">
