--- a/src/app/pages/msg-default/msg-default.component.html
+++ b/src/app/pages/msg-default/msg-default.component.html
@@ -1,32 +1,4 @@
-
-<!-- Page content -->
 <div class="page-content container-fluid mt-4">
-    <!-- <div class="row">
-        <div class="col-xl-4 col-lg-12 mb-5">
-            <div class="card shadow">
-                <div class="card-header">
-                    <h3 class="mb-0">Mensagens Cadastradas</h3>
-                </div>
-                <div class="card-body">
-                    <table class="table align-items-center table-flush">
-                        <tbody>
-                            <tr *ngFor="let item of listMsg">
-                                <th scope="row" class="w-100">{{item.title}}</th>
-                                <td><i class="msg-edit fas fa-edit text-blue" (click)="editMsg(item)"></i> </td>
-                                <td><i class="msg-edit fas fa-trash text-warning" (click)="openModal(item)"></i> </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
-
-        
-    </div> -->
-
-
-
-
     <div class="card-header border-2">
         <div class="row align-items-center">
           <div class="col d-flex justify-content-between">
@@ -63,12 +35,10 @@
                     {{item.title}}
                 </th>
                 <td style="width:20%; text-align: center;">
-                    <div class="d-flex box-btns">
+                    <div class="d-flex justify-content-center box-btns">
                         <button class="btn btn-primary" (click)="openModalEdit(modalEdit, item)">  <i class="fa-solid fa-edit mr-2"></i>Editar</button>
                         <button class="btn btn-purple-secondary" (click)="openModal(item)">  <i class="fa-solid fa-trash  mr-2"></i>Excluir</button>
                     </div>
-                    <!-- <i class="msg-edit fas fa-edit text-blue mr-3" ></i>
-                    <i class="msg-trash fas fa-trash text-warning" ></i>  -->
                 </td>
             </tr>
             <tr *ngIf="listMsg?.length === 0">
