--- a/src/app/pages/send-message/send/send.component.html
+++ b/src/app/pages/send-message/send/send.component.html
@@ -1,152 +1,110 @@
-<div class="header bg-gradient-green2 pb-8 pt-5 pt-md-8">
-    <div class="container-fluid">
-        <div class="header-body">
-            <h3 class="mb-0  text-white">
-              Envie uma mensagem
-              </h3> 
-        </div>
-    </div>
+
+
+
+<div class="modal-header">
+  <h4 class="modal-title" id="modal-basic-title">{{item.name}}</h4>
+  <button type="button" class="btn-close" aria-label="Close" (click)="close()"> <i class="fas  fa-close"></i></button>
 </div>
-<div class="container-fluid mt--7">
-  <div class="row">
-    <div class="col-xl-4 col-lg-12 mb-5">
-      <div class="card shadow">
-        <div class="card-header">
-          <h3 class="mb-0">{{item.name}}</h3>
-          <div class="col">
-            <h6 class="text-uppercase text-muted ls-1 mb-1">Filtre sua lista</h6>
+
+<!-- VISÃO INICIAL -->
+<div [hidden]="showModal">
+  <div class="modal-body">
+    <div class="row p-3">
+      <div class="col-12">
+  
+        <form role="form" [formGroup]="msgForm">
+  
+          <dsw-input-control label="Mensagem a ser enviada" for="inputListMsg" >
+            <select dwsInputSlot (change)="setParams()" id="inputListMsg" class="custom-select form-control" formControlName="inputListMsg">
+              <option value=""></option>
+              <option *ngFor="let item of listMsg" [value]="item.id">{{item.title}}</option>
+            </select>
+          </dsw-input-control>
+  
+          <div formArrayName="inputParam" >
+            <div *ngFor="let param of params; index as i"  class="col-lg-12">
+              <dsw-input-control label="{{param}}" >
+                <input dwsInputSlot class="form-control" [formControlName]="i" type="text" />
+              </dsw-input-control>
+            </div>
           </div>
-        </div>
-        <div class="card-body">
-          <form role="form" [formGroup]="msgForm">
-            <div class="col-lg-12" >
-              <label>Mensagem a ser enviada:</label>
-              <select  class="form-control"  (change)="setParams()"  id="inputListMsg"  formControlName="inputListMsg" >
-                <option value=""></option>
-                <option *ngFor="let item of listMsg" [value]="item.id">{{item.title}}</option>
-              </select>
-            </div> 
-            <div formArrayName="inputParam" >
-              <div *ngFor="let param of params; index as i"  class="col-lg-12">
-                <label for="param">{{param}}</label>
-                <span *ngIf="validator(i)">*</span> 
-                <input type="text" class="form-control" [formControlName]="i"  >
+  
+          <div class="mt-4 mb-4" [hidden]="!showInputImage">
+            <div class="import-box" #importBox>
+              <i class="ni ni-cloud-upload-96 text-info upload-icon"></i>
+              <p>Arraste o arquivo e solte aqui, ou clique no botão abaixo:</p>
+              <input id="file-input" #fileUpload type="file" name="name" style="display: none;" [accept]="fileAccept" />
+              <button type="button" (click)="openFileUpload()" class="btn btn-purple-secondary mt-1">Selecionar arquivo</button>
+            </div>
+            
+            <div class="row">
+              <div class="col">
+            
+                <div class="line d-flex " *ngFor="let file of files">
+                    <i class="ni ni-image mr-2"></i>
+                    <span class="number">{{file.name}}</span>
+                </div>
+            
               </div>
             </div>
-            <div class="col-lg-12" *ngIf="item.countOrders > 0">
-              <label for="formControlCountOrders">Quantidade Minima de pedidos:</label>
-              <input type="number" class="form-control" id="inputMinCountOrders"  formControlName="inputMinCountOrders" placeholder="5"> 
-            </div> 
-            <div class="col-lg-12" *ngIf="item.countOrders > 0">
-              <label for="formControlCountOrders">Quantidade Máxima de pedidos:</label>
-              <input type="number" class="form-control" id="inputMaxCountOrders"  formControlName="inputMaxCountOrders" placeholder="5"> 
-            </div> 
-            <div class="col-lg-12" *ngIf="item.countOrders > 0">
-              <label for="formControlCountOrders">Quantidade Minima de dias do ultimo pedido:</label>
-               <input type="number" class="form-control" id="inputMinDays"  formControlName="inputMinDays" placeholder="5"> 
-            </div> 
-            <div class="col-lg-12" *ngIf="item.countOrders > 0">
-              <label for="formControlCountOrders">Quantidade Máxima de dias do ultimo pedido:</label>
-              <input type="number" class="form-control" id="inputMaxDays"  formControlName="inputMaxDays" placeholder="5"> 
-            </div> 
-            <!-- <div class="col-lg-12" *ngIf="item.countOrders > 0">
-              <label>Clientes que compram:</label>
-              <select  class="form-control"  id="inputFilterDays"  formControlName="inputFilterDays" >
-                <option value=""></option>
-                <option value="JustNight">durante a noite</option>
-                <option value="JustDay">durante o dia</option>
-                <option value="JustWeeKend">de sexta a domingo</option>
-                <option value="JustWeek">de segunda a quinta</option>
-              </select>
-            </div>  -->
-            <div class="col-lg-12">
-              <br>
-              <a class="btn btn-primary" (click)="showCountToSendMessage()" >Enviar mensagem</a>
-            </div>
-          </form>
-        </div>
+          </div>
+  
+          <dsw-input-control label="Quantidade Minima de pedidos" for="inputMinCountOrders" *ngIf="item.countOrders > 0">
+            <input dwsInputSlot class="form-control" id="inputMinCountOrders" formControlName="inputMinCountOrders"
+              placeholder="Ex.: 5" type="number" />
+          </dsw-input-control>
+  
+          <dsw-input-control label="Quantidade Máxima de pedidos" for="inputMaxCountOrders" *ngIf="item.countOrders > 0">
+            <input dwsInputSlot class="form-control" id="inputMaxCountOrders" formControlName="inputMaxCountOrders"
+              placeholder="Ex.: 5" type="number" />
+          </dsw-input-control>
+  
+          <dsw-input-control label="Quantidade Minima de dias do ultimo pedido" for="inputMinDays" *ngIf="item.countOrders > 0">
+            <input dwsInputSlot class="form-control" id="inputMinDays" formControlName="inputMinDays"
+              placeholder="Ex.: 5" type="number" />
+          </dsw-input-control>
+  
+          <dsw-input-control label="Quantidade Máxima de dias do ultimo pedido" for="inputMaxDays" *ngIf="item.countOrders > 0">
+            <input dwsInputSlot class="form-control" id="inputMaxDays" formControlName="inputMaxDays"
+              placeholder="Ex.: 5" type="number" />
+          </dsw-input-control>
+        </form>
       </div>
     </div>
-
-    <!-- <div class="col-xl-8 col-lg-12">
-      <div class="card shadow">
-        <div class="card-header">
-          <h3 class="mb-0">Dados da Lista</h3>
-          <div class="col">
-            <h6 class="text-uppercase text-muted ls-1 mb-1">{{item.count}} contatos.</h6>
-            <h6 class="text-uppercase text-muted ls-1 mb-1">Unidade: {{item.unity}}</h6>
-          </div>
-        </div>
-        <div class="card-body">
-         
-          <div class="table-responsive" *ngIf="item.dateOrders.length > 0">
-            <h3 class="mb-0">Clientes por quantidade de dias Inativos</h3>
-            <table class="table align-items-center table-flush">
-              <thead class="thead-light">
-                <tr>
-                    <th scope="col">Dias de Inatividade</th>
-                    <th scope="col">Quantidade</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr *ngFor="let row of item.dateOrders">
-                  <th >
-                    {{getCountDasy(row.orderDate)}}
-                  </th>
-                  <td>
-                    {{row.count}}
-                   </td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-
-          <br>
-
-          <div class="table-responsive" *ngIf="item.countOrders.length > 0">
-            <h3 class="mb-0">Clientes por quantidade de pedidos</h3>
-            <table class="table align-items-center table-flush">
-              <thead class="thead-light">
-                <tr>
-                  <th scope="col">Quantidade de pedidos</th>
-                  <th scope="col">Quantidade de clientes</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr *ngFor="let row of item.countOrders">
-                  <td scope="row">
-                    {{row.orderCount}}
-                  </td>
-                  <th>
-                    {{row.count}}
-                   </th> 
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
-      </div>
-    </div> -->
+  
+  
+  </div>
+  <div class="modal-footer bg-purple-primary">
+    <button type="button" class="btn btn-secondary" (click)="sendFile()">Enviar mensagem</button>
   </div>
 </div>
 
-<dsw-modal-base [showModal]="showModal" (closeModal)="closeModal()">
-  <div class="container p-5">
-    <p *ngIf="showButton">Você confirma o envio da mensagem {{this.nameTemplate}} para {{countContacts}} contatos?</p>
-    <p class="" *ngIf="showButton">
-      <button *ngIf="showButton" class="btn btn-success" (click)="sendMessage()">Sim</button>
-      <button *ngIf="showButton" class="btn btn-warning" (click)="closeModal()">Não</button>
-    </p>
-    
-    <div class="d-flex align-items-center" *ngIf="showLoad">
-      <strong>Buscando os contatos...</strong>
-      <div class="spinner-border ml-auto" role="status" aria-hidden="true"></div>
+
+<div *ngIf="showModal">
+  <div class="modal-body">
+    <div class="row p-3">
+      <p *ngIf="showButton">Você confirma o envio da mensagem {{this.nameTemplate}} para {{countContacts}} contatos?</p>
+
+      <div class=" box" *ngIf="showLoad">
+        <div class="spinner-border spinner-primary-green" role="status">
+          <span class="sr-only">Buscando os contatos...</span>
+        </div>
+        <p>Buscando os contatos...</p>
+      </div>
+      
+      <div class="box" *ngIf="showProcess">
+        <div class="spinner-border spinner-primary-green" role="status">
+          <span class="sr-only">Enviando as mensagens...</span>
+        </div>
+        <p>Enviando as mensagens...</p>
+      </div>
+        
     </div>
-    
-    <div class="d-flex align-items-center" *ngIf="showProcess">
-      <strong>Enviando as mensagens...</strong>
-      <div class="spinner-border ml-auto" role="status" aria-hidden="true"></div>
-    </div>
-    
+  
+  
   </div>
-</dsw-modal-base>
+  <div class="modal-footer bg-purple-primary" >
+    <button *ngIf="showButton" class="btn btn-purple-secondary" (click)="closeModal()">Não</button>
+    <button *ngIf="showButton" type="button" class="btn btn-secondary" (click)="sendMessage()">Sim</button>
+  </div>
+</div>
